--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "referral managment",
+  "name": "",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,8 +19,8 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-loader-spinner": "^6.1.6",
     "react-phone-input-2": "^2.15.1",
